# friction-modified

./: .gitignore  CMakeLists.txt  README.md  code_structure_map.py  include_graph_src.dot  manage.sh  upload_release.sh
.github/workflows/: linux.yml  macos.yml  ubuntu.yml  windows.yml
docs/: AE80_15_ROUND_PLAN_2026-04-14.md  BUILD_DIRS.md  CODE_MAP_2026-03-29.md  CPP_CHECK_AUDIT.md  ISOLATION_CODE_MAP.md  ISOLATION_REFACTOR_PLAN.md  RELEASE_NOTES.md  STABILITY_RELEASE_CHECKLIST.md  SYSTEM_AUDIT_2026-04-13.md
docs/documentation/: ai-handoff-2026-03-27.md
src/app/: CMakeLists.txt  eimporters.cpp  eimporters.h  evfileio.cpp  friction.qss  main.cpp  memorychecker.cpp  renderhandler.cpp  renderhandler.h  resources.qrc
src/app/GUI/: aeshortcutcontroller.cpp  aeshortcutcontroller.h  aeshortcutdefaults.cpp  aeshortcutdefaults.h  canvaswindow.cpp  canvaswindow.h  canvaswrappernode.cpp  effectactions.cpp  ekeyfilter.cpp  extraactions.cpp  graphboxeslist.cpp  keysview.cpp  keysview.h  layerrelationswidget.cpp  layerrelationswidget.h  layouthandler.h  mainwindow.cpp  mainwindow.h  menu.cpp  timelinedockwidget.cpp  timelinedockwidget.h  timelinehighlightwidget.cpp  timelinewidget.cpp  timelinewidget.h
src/app/xdg/: friction.desktop  friction.xml
src/cmake/: friction-common.cmake  friction-meta.cmake  friction-version.cmake
src/core/: CMakeLists.txt  actions.cpp  actions.h  appsupport.cpp  canvas.cpp  canvas.h  canvasbase.h  canvasgizmos.cpp  canvashandlesmartpath.cpp  canvasmouseevents.cpp  canvasmouseinteractions.cpp  canvasselectedboxesactions.cpp  coreresources.qrc  ffmpegcompat.h  fileshandler.cpp  fileshandler.h  hardwareinfo.cpp  outputsettings.cpp  outputsettings.h  pluginmanager.cpp  pluginmanager.h  rangemap.h  simpletask.cpp  simpletask.h  singlewidgettarget.cpp  singlewidgettarget.h  swt_abstraction.cpp  swt_abstraction.h  swt_rulescollection.h  themesupport.cpp  themesupport.h  videoencoder.cpp  videoencoder.h
src/core/Animators/: animator.cpp  boolanimator.h  complexanimator.cpp  complexanimator.h  customproperties.cpp  eboxorsound.cpp  enumanimator.cpp  enumanimator.h  graphanimator.h  graphkey.cpp  qpointfanimator.cpp  qpointfanimator.h  qrealanimator.cpp  qrealanimator.h  transformanimator.h
src/core/BlendEffects/: blendeffect.cpp  blendeffect.h  blendeffectcollection.cpp  blendeffectcollection.h  layermaskeffect.cpp  layermaskeffect.h  moveblendeffect.h  targetedblendeffect.h  trackmattedrawresolver.h  trackmatteeffect.cpp  trackmatteeffect.h
src/core/Boxes/: animationbox.cpp  animationbox.h  boundingbox.cpp  boundingbox.h  boxrendercontainer.cpp  boxrendercontainer.h  boxrenderdata.cpp  boxrenderdata.h  circle.cpp  containerbox.cpp  containerbox.h  imagebox.h  imagesequencebox.cpp  imagesequencebox.h  internallinkboxbase.h  internallinkcanvas.cpp  internallinkcanvas.h  internallinkgroupbox.cpp  layerboxrenderdata.cpp  linkcanvasrenderdata.cpp  linkcanvasrenderdata.h  pathbox.cpp  pathbox.h  pathboxrenderdata.cpp  pathboxrenderdata.h  polygonbox.cpp  polygonbox.h  rectangle.cpp  renderdatahandler.cpp  renderdatahandler.h  videobox.cpp
src/core/CacheHandlers/: cachecontainer.cpp  hddcachablecachehandler.cpp  hddcachablecachehandler.h  hddcachablecont.cpp  hddcachablecont.h  hddcachablerangecont.cpp  hddcachablerangecont.h  imagecachecontainer.cpp  imagedatahandler.cpp  imagedatahandler.h  samples.cpp  samples.h  sceneframecontainer.cpp  soundcachehandler.h  tmpsaver.cpp
src/core/Expressions/: expressionpresets.cpp
src/core/FileCacheHandlers/: animationcachehandler.h  audiostreamsdata.cpp  filehandlerobjref.h  soundreader.cpp  videocachehandler.cpp  videocachehandler.h  videoframeloader.cpp  videoframeloader.h  videostreamsdata.cpp  videostreamsdata.h
src/core/MovablePoints/: smartnodepoint.cpp
src/core/PathEffects/: patheffectcollection.h
src/core/Private/: document.cpp  document.h  esettings.cpp  esettings.h  qatomiclist.h
src/core/Properties/: property.cpp  property.h
src/core/RasterEffects/: blindseffect.cpp  blindseffect.h  cornerpineffect.cpp  cornerpineffect.h  deepgloweffect.cpp  deepgloweffect.h  displacementmapeffect.cpp  displacementmapeffect.h  motiontileeffect.cpp  motiontileeffect.h  puppeteffect.cpp  puppeteffect.h  rastereffect.h  rastereffectcollection.cpp  rastereffectcollection.h  rastereffectmenucreator.cpp  rastereffectmenucreator.h  rastereffectsinclude.h
src/core/ReadWrite/: evformat.h
src/core/Segments/: fitcurves.cpp
src/core/Sound/: audiohandler.cpp  eindependentsound.h  esound.cpp  esound.h  esoundobjectbase.cpp  esoundobjectbase.h  esoundsettings.h  soundcomposition.cpp  soundcomposition.h  soundmerger.cpp
src/core/Timeline/: durationrectangle.cpp
src/core/TransformEffects/: parenteffect.cpp  parenteffect.h  targettransformeffect.cpp  targettransformeffect.h  transformeffectcollection.h
src/core/shaders/: gltfpreview.frag  gltfpreview.vert
src/core/smartPointers/: eobject.h  selfref.h  stdselfref.h
src/modules/ae_masks/: aemaskmodule.cpp  aemaskmodule.h
src/modules/gltf/: glbbox.cpp  glbbox.h  glbcliptrack.cpp  glbcliptrack.h  glbfilecachehandler.cpp  glbfilecachehandler.h  glbmetadata.cpp  glbmetadata.h  gltfmodule.cpp  gltfmodule.h  gltfrenderer.cpp  gltfrenderer.h  gltfscene.cpp  gltfscene.h
src/modules/ora/: oramodule.cpp  oramodule.h
src/modules/particles/: particleoverlifeanimator.h  particlesystemeffect.cpp  particlesystemeffect.h
src/modules/puppet/: puppettoolmodule.cpp  puppettoolmodule.h
src/modules/webm/: webmalphapolicy.cpp  webmalphapolicy.h
src/skia/: .gitignore  .gitmodules  BUILD.gn  CMakeLists.txt  DEPS  README.md  ci.bat  ci.sh
src/skia/.github/workflows/: mac.yml  ubuntu.yml  windows.yml
src/skia/gn/toolchain/: BUILD.gn
src/skia/include/core/: SkRefCnt.h
src/skia/include/private/: SkWeakRefCnt.h
src/ui/dialogs/: adjustscenedialog.cpp  exportsvgdialog.cpp  scenesettingsdialog.cpp
src/ui/optimalscrollarena/: scrollwidget.cpp  scrollwidget.h  (+2 more)
tools/: run_cppcheck_focus.sh  run_stability_scan.sh
tools/appimage/: AppRun
tools/cppcheck/: suppressions.txt
(+68 files in other folders)
